# agentflow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
examples/calculator/: README.md  __init__.py  advanced_flow.py  calculator_flow.py
examples/calculator/agents/calculator/: TOOL_VALIDATION.md  index.py  test_tool_count.csv
examples/calculator/agents/calculator/tests/: calculator.csv
examples/calculator/reports/: test_report.json
examples/researcher/: __init__.py  researcher_flow.py
examples/weather/: __init__.py  weather_flow.py
src/agent_flow/: __init__.py  api.py  build_ui.py  cli.py  compat.py  flow.py  loader.py  types.py  ui.py
src/agent_flow/static/: index.html
src/agent_flow/static/assets/: index-2O4GnvT3.css  index-aO1LAeBK.js
src/agent_flow/testing/: __init__.py  constants.py  discovery.py  executor.py  runner.py  utils.py
src/agent_flow/utils/: common.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
ui/src/: App.tsx  index.css  main.tsx  types.ts
ui/src/components/: AgentEditor.tsx  ControlsPanel.tsx  InputPanel.tsx  OutputDisplay.tsx  ThemeToggle.tsx  ToolCallSummary.tsx  WorkflowSidebar.tsx
